2010-09-15  Szymon Janc <szymon@janc.net.pl>

	* grub-core/lib/xzembed/xz_dec_stream.c (xz_dec_end): Fix memory leak.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix incorrect echo options handling.
	Reported by: Yves Blusseau.

	* include/grub/command.h (grub_command_flags_t): New flags
	GRUB_COMMAND_ACCEPT_DASH and GRUB_COMMAND_OPTIONS_AT_START.
	* grub-core/lib/arg.c (grub_arg_parse): Handle new flags.
	* grub-core/commands/echo.c (GRUB_MOD_INIT): Use new flags.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/command.h (GRUB_COMMAND_FLAG_CMDLINE): Removed. All
	users updated.
	(GRUB_COMMAND_FLAG_MENU): Likewise.
	(GRUB_COMMAND_FLAG_BOTH): Likewise.
	(GRUB_COMMAND_FLAG_TITLE): Removed.
	(GRUB_COMMAND_FLAG_NO_ECHO): Likewise.
	(GRUB_COMMAND_FLAG_EXTCMD): Moved into enum.
	(GRUB_COMMAND_FLAG_DYNCMD): Likewise.
	(GRUB_COMMAND_FLAG_BLOCKS): Likewise.
	(grub_command_flags_t): New enum. All users updated.

2010-09-14  Seth Goldberg <seth.goldberg@oracle.com>

	Fix solaris compilation.

	* grub-core/Makefile.core.def (kernel): Include gnulib/error.c on emu.
	(grub-emu): Add LIBZFS and LIBNVPAIR to ldadd.
	(grub-emu-list): Likewise.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove deprecated root command.

	* grub-core/commands/minicmd.c (grub_mini_cmd_root): Removed. All users
	updated.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/i386/pc/grub-setup.c: Merge this ...
	* util/sparc64/ieee1275/grub-setup.c:  ... and this ...
	* util/grub-setup.c: ... into this.
	* include/grub/sparc64/ieee1275/boot.h (grub_boot_blocklist) [ASM_FILE]:
	New struct.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ext2.c (grub_ext2_open): Use return error value when
	possible.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/sun.c (sun_partition_map_iterate): Don't needlesly
	allocate p.

2010-09-14  Vladimir Serbinenko  <phcoder@gmail.com>
